--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -6,7 +6,7 @@
 
 .main {
   width: 100%;
-  min-height: 100vh;
+  // min-height: 100vh;
   position: relative;
 
   @-webkit-keyframes bg-change {
@@ -39,8 +39,8 @@
   }
 
   .topCover {
-    height: 540px;
-    background-size: 100% 100%;
+    height: 560px;
+    // background-size: 100% 100%;
     background-position: 50% 50%;
     -webkit-animation: bg-change 18s ease-in-out infinite normal both;
     animation: bg-change 18s ease-in-out infinite normal both;
@@ -52,7 +52,7 @@
     align-items: center;
     margin: auto;
     margin-top: -480px;
-    width: 1440px;
+    max-width: 1440px;
     height: 72px;
     background: rgba($color: white, $alpha: 0.2);
     border-radius: 16px;
@@ -61,7 +61,7 @@
     .divider {
       width: 1px;
       height: 24px;
-      border-right: 1px solid #ffffff;
+      border-left: 1px solid #ffffff;
       margin: auto 30px;
     }
     .solgan {
@@ -73,9 +73,22 @@
       text-align: left;
       flex-grow: 1;
     }
+    .socialMedias {
+      width: 180px;
+      height: 40px;
+      position: relative;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
     .socialMedias > span {
-      display: inline-block;
-      margin-left: 30px !important;
+      width: 40px !important;
+      height: 40px !important;
+      position: inherit !important;
+      img {
+        height: 40px !important;
+        width: 40px !important;
+      }
     }
   }
   .introBox {
@@ -84,24 +97,44 @@
     max-width: 1440px;
     margin: auto;
     margin-top: 352px;
+    position: relative;
+
+    .currency1 {
+      position: absolute;
+      right: -6%;
+      top: -30%;
+    }
+    .currency2 {
+      position: absolute;
+      left: -9%;
+      top: 28%;
+    }
+    .currency3 {
+      position: absolute;
+      left: 46%;
+      top: 42%;
+    }
     .gamePlayImg {
       margin-right: -40px;
+      position: relative;
+      width: 38%;
+      padding-top: 38%;
     }
   }
   .introduction {
     @keyframes slide-top {
       0% {
         -webkit-transform: translateY(50px);
-                transform: translateY(50px);
-                opacity: 0.3;
+        transform: translateY(50px);
+        opacity: 0.3;
       }
       70% {
         opacity: 0.7;
       }
       100% {
         -webkit-transform: translateY(0);
-                transform: translateY(0);
-                opacity: 1;
+        transform: translateY(0);
+        opacity: 1;
       }
     }
     h3 {
@@ -111,16 +144,18 @@
       color: #8e50e4;
       line-height: 96px;
       margin: 0;
-      -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+        both;
+      animation: slide-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     }
     p {
       font-size: 60px;
       font-weight: bold;
       color: #ffffff;
       line-height: 22px;
-      -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-top 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+        both;
+      animation: slide-top 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     }
   }
 }
@@ -156,12 +191,14 @@
       margin-top: -240px;
       margin-right: -120px;
       background-image: url(../public/featureTitle.png);
+      background-size: contain;
     }
   }
 
   .featureList {
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
 
     .featureItem {
       display: flex;
@@ -226,6 +263,7 @@
     .material1 {
       position: absolute;
       background-image: url(../public/usage_material1.png);
+      background-size: contain;
       display: inline-block;
       width: 207px;
       height: 132px;
@@ -235,6 +273,7 @@
     .material2 {
       position: absolute;
       background-image: url(../public/usage_material2.png);
+      background-size: contain;
       display: inline-block;
       width: 114px;
       height: 122px;
@@ -281,12 +320,15 @@
   }
 }
 .footer {
+  margin-top: 150px;
   height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-image: url(/footer.jpg);
+
   h3 {
     font-size: 36px;
     font-family: Inter-Bold, Inter;
@@ -302,6 +344,267 @@
     color: #ffffff;
     line-height: 21px;
     margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .headerBox,
+  .introBox {
+    width: 88%;
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  .main {
+    .introduction {
+      h3 {
+        font-size: 60px;
+        line-height: 60px;
+      }
+      p {
+        font-size: 56px;
+        margin: 0;
+        line-height: 80px;
+      }
+    }
+  }
+
+  .topCover {
+    height: 480px;
+  }
+  .headerBox {
+    margin-top: -400px;
+  }
+}
+@media screen and (max-width: 1320px) {
+  .main {
+    .introduction {
+      h3 {
+        font-size: 48px;
+        line-height: 56px;
+      }
+      p {
+        font-size: 40px;
+        margin: 0;
+        line-height: 56px;
+      }
+    }
+  }
+
+  .topCover {
+    height: 400px;
+  }
+  .headerBox {
+    margin-top: -320px;
+  }
+}
+@media screen and (max-width: 950px) {
+  .main {
+    .topCover {
+      height: 240px;
+    }
+    .headerBox {
+      margin-top: -210px;
+      height: 48px;
+      padding: 8px 15px;
+      .socialMedias {
+        width: 150px;
+      }
+      .socialMedias > span {
+        width: 32px !important;
+        height: 32px !important;
+        img {
+          width: 32px !important;
+          height: 32px !important;
+        }
+      }
+
+      .solgan {
+        display: none;
+      }
+      .divider {
+        flex-grow: 1;
+        text-align: left;
+        margin: auto 15px;
+      }
+    }
+    .introduction {
+      h3 {
+        font-size: 36px;
+        line-height: 36px;
+      }
+      p {
+        font-size: 30px;
+        margin: 0;
+        line-height: 40px;
+      }
+    }
+    .introBox {
+      margin-top: 140px;
+    }
+  }
+
+  .featureBox {
+    width: 80%;
+    margin: 33px auto;
+    height: auto;
+    padding-bottom: 60px;
+    .featureList {
+      flex-direction: column;
+      align-items: center;
+      .featureItem {
+        h4 {
+          margin: 30px auto 10px;
+        }
+      }
+    }
+    .featureDivider {
+      width: 367px;
+      height: 2px;
+      background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.5) 51%,
+        rgba(255, 255, 255, 0) 100%
+      );
+      margin: 60px auto;
+    }
+    .featureTitle {
+      max-width: 280px;
+      font-size: 30px;
+      line-height: 36px;
+      margin: 60px auto;
+
+      &::after {
+        width: 152px;
+        height: 117px;
+        margin-top: -100px;
+        margin-right: -100px;
+      }
+    }
+  }
+
+  .usageBox {
+    width: 80%;
+    margin-top: 60px;
+    .usageTitle {
+      font-size: 30px;
+      line-height: 36px;
+      max-width: 314px;
+
+      .material1 {
+        width: 121px;
+        height: 77px;
+        left: 0%;
+        top: 45%;
+      }
+      .material2 {
+        width: 85px;
+        height: 90px;
+        left: 80% !important;
+        top: -17% !important;
+      }
+    }
+    .usageList {
+      flex-direction: column;
+      margin-top: 40px;
+      .usageItem {
+        & + .usageItem {
+          margin-top: 4%;
+          margin-left: 0;
+        }
+
+        padding-top: 40px;
+        height: 393px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .featureBox,
+  .usageBox {
+    width: calc(100% - 30px);
+    margin: auto 15px;
+  }
+  .usageBox {
+    margin-top: 60px;
+  }
+  .featureItem,
+  .usageItem {
+    h4 {
+      font-size: 30px !important;
+      line-height: 30px !important;
+      margin-top: 30px !important;
+      margin-bottom: 8px !important;
+    }
+    p {
+      font-size: 18px !important;
+      line-height: 28px !important;
+      max-width: 262px !important;
+      margin: 0;
+    }
+    img {
+      width: 160px !important;
+      height: 160px !important;
+    }
+  }
+
+  .footer {
+    height: 186px;
+    margin-top: 40px;
+    h3 {
+      font-size: 24px;
+      line-height: 24px;
+      margin-top: 30px;
+    }
+    p {
+      font-size: 16px;
+      line-height: 24px;
+      max-width: 290px;
+      margin-top: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .main {
+    margin-bottom: 80px;
+    .introBox {
+      min-height: none;
+      .gamePlayImg {
+        position: absolute;
+        right: 0px;
+        width: 40vw;
+        height: 40vw;
+        min-width: 220px;
+        min-height: 220px;
+        top: 100px;
+        right: -50px;
+        z-index: 0;
+      }
+      .currency1 {
+        width: 54px;
+        height: 54px;
+        top: 0px;
+        right: -8px;
+      }
+      .currency2 {
+        width: 39px;
+        height: 37px;
+        top: 250px;
+      }
+      .currency3 {
+        width: 37px;
+        height: 35px;
+        top: 125%;
+        left: 30%;
+      }
+    }
+    .introduction {
+      position: relative;
+      z-index: 10;
+    }
   }
 }
 
