--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -11,39 +11,38 @@
 
   @-webkit-keyframes bg-change {
     0% {
-      background-image: url(../public/topCover1.png);
+      background-image: url(../public/topCover1.jpg);
     }
     33% {
-      background-image: url(../public/topCover2.png);
+      background-image: url(../public/topCover2.jpg);
     }
     66% {
-      background-image: url(../public/topCover3.png);
+      background-image: url(../public/topCover3.jpg);
     }
     100% {
-      background-image: url(../public/topCover1.png);
+      background-image: url(../public/topCover1.jpg);
     }
   }
   @keyframes bg-change {
     0% {
-      background-image: url(../public/topCover1.png);
+      background-image: url(../public/topCover1.jpg);
     }
     33% {
-      background-image: url(../public/topCover2.png);
+      background-image: url(../public/topCover2.jpg);
     }
     66% {
-      background-image: url(../public/topCover3.png);
+      background-image: url(../public/topCover3.jpg);
     }
     100% {
-      background-image: url(../public/topCover1.png);
+      background-image: url(../public/topCover1.jpg);
     }
   }
 
   .topCover {
     height: 560px;
-    // background-size: 100% 100%;
     background-position: 50% 50%;
-    -webkit-animation: bg-change 18s ease-in-out infinite normal both;
-    animation: bg-change 18s ease-in-out infinite normal both;
+    -webkit-animation: bg-change 18s cubic-bezier(0.600, -0.280, 0.735, 0.045) infinite normal both;
+    animation: bg-change 18s cubic-bezier(0.600, -0.280, 0.735, 0.045) infinite normal both;
   }
 
   .headerBox {
@@ -58,6 +57,11 @@
     border-radius: 16px;
     padding: 18px 40px;
 
+    .logoBox {
+      width: 161px;
+      height: 36px;
+      position: relative;
+    }
     .divider {
       width: 1px;
       height: 24px;
@@ -367,13 +371,18 @@
         line-height: 80px;
       }
     }
+    .topCover {
+      height: 480px;
+    }
+    .headerBox {
+      margin-top: -400px;
+    }
+    .introBox {
+      margin-top: 290px;
+    }
   }
-
-  .topCover {
-    height: 480px;
-  }
-  .headerBox {
-    margin-top: -400px;
+  .featureBox, .usageBox {
+    width: calc(100% - 20px);
   }
 }
 @media screen and (max-width: 1320px) {
@@ -389,13 +398,15 @@
         line-height: 56px;
       }
     }
-  }
-
-  .topCover {
-    height: 400px;
-  }
-  .headerBox {
-    margin-top: -320px;
+    .topCover {
+      height: 400px;
+    }
+    .headerBox {
+      margin-top: -320px;
+    }
+    .introBox {
+      margin-top: 215px;
+    }
   }
 }
 @media screen and (max-width: 950px) {
@@ -407,6 +418,12 @@
       margin-top: -210px;
       height: 48px;
       padding: 8px 15px;
+
+      .logoBox {
+        width: 121px;
+        height: 28px;
+      }
+
       .socialMedias {
         width: 150px;
       }
