--- a/components/Layout/styles.module.scss
+++ b/components/Layout/styles.module.scss
@@ -3,3 +3,9 @@
   margin-top: 6.67rem;
   overflow: hidden;
 }
+
+@media screen and (max-width: 1024px){
+  .containBox {
+    margin-top: 6rem;
+  }
+}
