--- a/components/PageHome/GameStrategy/style.module.scss
+++ b/components/PageHome/GameStrategy/style.module.scss
@@ -2,13 +2,19 @@
   // height: 134rem;
 
   .gameStrategyBox {
-    height: 100%;
-    width: 73%;
+    // height: 100%;
+    width: 78.2%;
     margin: auto;
     padding-top: 6.75rem;
 
     .cardList {
-     
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-top: 3.33rem;
+      & > div {
+        width: calc(50% - 1rem);
+      }
     }
   }
 }
