--- a/components/PageHome/GuideStep/style.module.scss
+++ b/components/PageHome/GuideStep/style.module.scss
@@ -1,22 +1,23 @@
 .guidestep {
   background-color: white;
   min-height: 200px;
+  
   .guidestepBox {
-    width: 73%;
+    width: 78.2%;
     margin: auto;
-    padding-top: 6.75rem;
+    padding-top: 6.67rem;
+    padding-bottom: 6.67rem;
 
-    .cardList {
+    .stepList {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
-      margin-top: 3.33rem;
+      margin-top: 5.83rem;
 
       & > div {
-        width: calc((100% - 8rem) / 4);
-        margin-bottom: 2.67rem;
+        width: calc((100%) / 4);
       }
     }
+
   }
 }
 
@@ -24,11 +25,8 @@
   .guidestep {
     .guidestepBox {
       width: 78%;
-      .cardList {
-        & > div {
-          width: calc((100% - 7rem) / 4);
-          margin-bottom: 2.3rem;
-        }
+      .stepList {
+        
       }
     }
   }
@@ -39,11 +37,9 @@
     .guidestepBox {
       width: 83.3%;
       padding-top: 6.67rem;
-      .cardList {
-        & > div {
-          width: calc((100% - 6rem) / 4);
-          margin-bottom: 2rem;
-        }
+      padding-bottom: 6.17rem;
+      .stepList {
+        
       }
     }
   }
@@ -56,8 +52,7 @@
       width: 89%;
       padding-top: 5rem;
       
-      .cardList {
-        margin-top: 2.5rem;
+      .stepList {
       }
     }
   }
@@ -69,9 +64,10 @@
     .guidestepBox {
       width: 92.2%;
       padding-top: 5rem;
+      padding-bottom: 5rem;
       
-      .cardList {
-        margin-top: 2.5rem;
+      .stepList {
+        margin-top: 4rem;
       }
     }
   }
