--- a/components/PageHome/components/SectionTitle/style.module.scss
+++ b/components/PageHome/components/SectionTitle/style.module.scss
@@ -20,3 +20,12 @@
     line-height: 3rem;
   }
 }
+
+@media screen and (max-width: 1024px){
+  .sectionTitleBox {
+    .emphasize, .normal {
+      font-size: 2.5rem;
+      line-height: 2.5rem;
+    }
+  }
+}
