--- a/components/GameCard/style.module.scss
+++ b/components/GameCard/style.module.scss
@@ -2,7 +2,7 @@
   width: auto;
   max-width: 27.15rem;
   background: #ffffff;
-  border-radius: 1.33rem;
+  border-radius: 1.33rem !important;
 
   .gameImage {
     position: relative;
