--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -3,11 +3,11 @@
   background: #ffffff;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 1500;
   box-shadow: rgb(229, 232, 235) 0px 1px 0px 0px;
 
   .headerBox {
-    width: 83.33%;
+    width: 93.33%;
     height: 100%;
     margin: auto;
     display: flex;
@@ -53,6 +53,39 @@
           position: relative;
         }
       }
+
+      @keyframes btnAnimation {
+        0% {
+          box-shadow: 0 0 0 0 #ff6e85;
+        }
+      }
+      .connectBtn {
+        height: auto;
+        padding: 1rem 1.67rem;
+        background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
+        border-radius: 1.67rem;
+        filter: blur(0px);
+
+        font-size: 1.33rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #ffffff;
+        line-height: 1.33rem;
+
+        animation: btnAnimation 1s infinite ease-in-out;
+        box-shadow: 0 0 0 8px transparent;
+
+        &:hover {
+          animation: none;
+        }
+      }
+    }
+
+    .mobileMenuIcon {
+      svg {
+        font-size: 2.4rem;
+        color: #222;
+      }
     }
   }
 }
@@ -78,9 +111,8 @@
   }
   .divider {
     height: 0.08rem;
-    opacity: 0.1;
-    border: 0.08rem solid #222222;
-    margin: 0 auto 0.5rem;
+    border-bottom: 0.08rem solid rgba($color: #222222, $alpha: 0.1);
+    margin: 0.5rem auto;
   }
   .menuItem {
     font-size: 1.5rem;
@@ -100,6 +132,52 @@
       margin-right: 1rem;
     }
   }
+  .networkHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1.67rem;
+
+    p {
+      flex-grow: 1;
+      text-align: center;
+      font-size: 1.33rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: rgba($color: #222222, $alpha: 0.5);
+      line-height: 1.33rem;
+      cursor: default;
+    }
+  }
+}
+
+.hiddenAnimation {
+  @-webkit-keyframes fade-out-top {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateY(-50px);
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+  }
+  @keyframes fade-out-top {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateY(-50px);
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+  }
+  -webkit-animation: fade-out-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: fade-out-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 .walletNav {
@@ -137,24 +215,6 @@
     -webkit-animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94)
       both;
     animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-
-    .networkHeader {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 1.67rem;
-
-      p {
-        flex-grow: 1;
-        text-align: center;
-        font-size: 1.33rem;
-        font-family: Inter-SemiBold, Inter;
-        font-weight: 600;
-        color: rgba($color: #222222, $alpha: 0.5);
-        line-height: 1.33rem;
-        cursor: default;
-      }
-    }
   }
 
   &:hover {
@@ -172,47 +232,58 @@
   }
 }
 
+.drawer {
+  position: relative;
+  width: 40rem;
+  z-index: 900;
+  margin-top: 6rem;
+  padding: 2.75rem 2rem;
 
-@media screen and (max-width: 1024px){
-  .header {
-    height: 6rem;
+  .userInfoConnect {
+    background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
+    border-radius: 2rem;
+    padding: 1.33rem;
+    font-size: 1.33rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
+    color: #ffffff;
+    line-height: 1.33rem;
+    text-align: center;
+    margin-top: 5vh;
+    cursor: pointer;
   }
 }
-
-
 
 @media screen and (max-width: 1650px) {
   .header {
     .headerBox {
-      width: 78%;
-     
+      width: 94%;
     }
   }
 }
 
 @media screen and (max-width: 1440px) {
   .header {
-
     .headerBox {
-      width: 83.3%;
+      // width: 83.3%;
     }
   }
 }
 
 @media screen and (max-width: 1240px) {
   .header {
-
     .headerBox {
-      width: 89%;
-    
+      // width: 89%;
     }
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .header {
+    height: 6rem;
+
     .headerBox {
-      width: 92.2%;
+      // width: 92.2%;
 
       .headerLogo {
         width: 11.67rem;
@@ -229,6 +300,26 @@
         & > div {
           padding: 0 0.88rem;
         }
+
+        .connectBtn {
+          margin-left: 0.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .drawer {
+    width: 100vw;
+    margin-top: 5.33rem;
+  }
+  .header {
+    height: 5.33rem;
+    .headerBox {
+      .headerLogo {
+        width: 10rem;
+        height: 2.33rem;
       }
     }
   }
