--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -15,6 +15,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  span {
+    text-decoration: underline;
+  }
+
   h3 {
     font-size: 4rem;
     font-family: Inter-Bold, Inter;
@@ -29,6 +34,8 @@
     font-weight: 400;
     color: #ffffff;
     line-height: 1.75rem;
+    text-align: center;
+    max-width: 80%;
   }
 }
 
@@ -66,6 +73,27 @@
       font-weight: 500;
       color: #ffffff;
       line-height: 1.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contactUs {
+    h3 {
+      font-size: 2rem;
+      font-family: Montserrat-Black, Montserrat;
+      font-weight: 900;
+      color: #ffffff;
+      line-height: 2rem;
+    }
+    p {
+      font-size: 1.33rem;
+      font-family: Inter-Regular, Inter;
+      font-weight: 400;
+      color: #ffffff;
+      line-height: 2rem;
+      max-width: 80%;
+      text-align: center;
     }
   }
 }
