--- a/components/PageHome/GuideStep/style.module.scss
+++ b/components/PageHome/GuideStep/style.module.scss
@@ -1,7 +1,7 @@
 .guidestep {
   background-color: white;
   min-height: 200px;
-  
+
   .guidestepBox {
     width: 78.2%;
     margin: auto;
@@ -10,6 +10,7 @@
 
     .stepList {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       margin-top: 5.83rem;
 
@@ -17,7 +18,6 @@
         width: calc((100%) / 4);
       }
     }
-
   }
 }
 
@@ -26,7 +26,6 @@
     .guidestepBox {
       width: 78%;
       .stepList {
-        
       }
     }
   }
@@ -39,7 +38,6 @@
       padding-top: 6.67rem;
       padding-bottom: 6.17rem;
       .stepList {
-        
       }
     }
   }
@@ -47,27 +45,45 @@
 
 @media screen and (max-width: 1240px) {
   .guidestep {
-
     .guidestepBox {
       width: 89%;
       padding-top: 5rem;
-      
+
       .stepList {
       }
     }
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .guidestep {
-
     .guidestepBox {
       width: 92.2%;
       padding-top: 5rem;
       padding-bottom: 5rem;
-      
+
       .stepList {
         margin-top: 4rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .guidestep {
+    .guidestepBox {
+      padding-top: 3.33rem;
+      padding-bottom: 2.5rem;
+      .stepList {
+        & > div {
+          width: 50%;
+          margin-top: 2rem;
+          margin-bottom: 1.5rem;
+        }
+      }
+
+      .stepList {
+        margin-top: 1rem;
       }
     }
   }
