--- a/components/PageHome/GameStrategy/style.module.scss
+++ b/components/PageHome/GameStrategy/style.module.scss
@@ -24,7 +24,7 @@
   .gameStrategy {
 
     .gameStrategyBox {
-      width: 78%;
+      width: 80%;
       .cardList {
       
      
@@ -85,6 +85,14 @@
           width: 100%;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 600px){
+  .gameStrategy {
+    .gameStrategyBox {
+      padding-top: 2.5rem;
     }
   }
 }
