--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -2,10 +2,8 @@
   position: relative;
   height: 31.25vw;
   max-height: 45.83rem;
+  min-height: 33.33rem;
   object-fit: cover;
-  // img {
-  //   object-fit: contain !important;
-  // }
 }
 
 .contactUs {
@@ -78,6 +76,10 @@
 }
 
 @media screen and (max-width: 600px) {
+  .coverBox {
+    height: 41.67rem;
+    object-fit: contain;
+  }
   .contactUs {
     h3 {
       font-size: 2rem;
