feat: add language translation

--- a/components/GameCard/style.module.scss
+++ b/components/GameCard/style.module.scss
@@ -1,6 +1,6 @@
 .gameCard {
   width: auto;
-  max-width: 27.15rem;
+  // max-width: 27.15rem;
   background: #ffffff;
   border-radius: 1rem !important;
 
