--- a/components/PageHome/components/StrategyArticle/style.module.scss
+++ b/components/PageHome/components/StrategyArticle/style.module.scss
@@ -23,8 +23,9 @@
       font-weight: 500;
       color: #222222;
       line-height: 3.33rem;
+      text-align: left;
 
-      margin: 2.33rem auto;
+      margin: 2.33rem 0;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
