--- a/components/PageHome/components/UserStep/style.module.scss
+++ b/components/PageHome/components/UserStep/style.module.scss
@@ -83,6 +83,7 @@
         box-shadow: 0rem 0.67rem 2.5rem 0rem rgba(142, 80, 228, 0.3);
         border-radius: 1.67rem;
         filter: blur(0px);
+        cursor: pointer;
       }
     }
   }
