--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -1,29 +1,8 @@
 .footer {
   height: 20.81rem;
-  background: #222222;
+  background: white;
   position: relative;
 
-  &::before {
-    display: inline-block;
-    content: '';
-    width: 26.5%;
-    height: 100%;
-    background: url(../../public/footer_bg1.svg);
-    position: absolute;
-    top: 0;
-    background-repeat: no-repeat;
-  }
-  &::after {
-    display: inline-block;
-    content: '';
-    width: 23%;
-    height: 100%;
-    background: url(../../public/footer_bg2.svg);
-    position: absolute;
-    top: 0;
-    right: 0.03%;
-    background-repeat: no-repeat;
-  }
   .footerBox {
     height: 100%;
     width: 78.2%;
@@ -31,18 +10,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #222;
 
     .mobileBrands {
       order: 0;
       h3 {
-        margin-top: 3.4rem;
+        margin-top: 3.33rem;
         margin-bottom: 1.25rem;
       }
       p {
         font-size: 1.17rem;
         font-family: Inter-Medium, Inter;
         font-weight: 500;
-        color: rgba($color: white, $alpha: 0.5);
+        color: rgba($color: #222, $alpha: 1);
         line-height: 1.67rem;
       }
     }
@@ -50,7 +30,7 @@
       font-size: 1.17rem;
       font-family: Inter-Medium, Inter;
       font-weight: 500;
-      color: rgba($color: white, $alpha: 0.5);
+      color: rgba($color: #222, $alpha: 0.5);
       line-height: 1.83rem;
       margin: 2.5rem 0 2.67rem;
       order: 10;
@@ -58,64 +38,44 @@
     .linkList {
       display: flex;
       align-items: center;
+      margin-top: 3.42rem;
     }
     .brands {
       flex-grow: 1;
       p {
-        margin-top: 2.25rem;
+        margin-top: 1.42rem;
         font-size: 1.33rem;
         font-family: Inter-Medium, Inter;
         font-weight: 500;
-        color: #ffffff;
+        color: #222222;
         line-height: 1.33rem;
       }
       h6 {
-        margin-top: 3.33rem;
+        margin-top: 4.08rem;
         font-size: 1.33rem;
         font-family: Inter-Medium, Inter;
         font-weight: 500;
-        color: rgba($color: white, $alpha: 0.5);
+        color: rgba(#222, 0.3);
         line-height: 1.33rem;
       }
     }
     .platform,
-    .support {
+    .support,
+    .medias {
       h4 {
-        font-size: 1.75rem;
-        font-family: Inter-Bold, Inter;
-        font-weight: bold;
-        color: #ffffff;
-        line-height: 1.75rem;
+        font-size: 1.5rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #222222;
+        line-height: 1.5rem;
       }
       p {
         font-size: 1.33rem;
         font-family: Inter-Medium, Inter;
         font-weight: 500;
-        color: #ffffff;
+        color: #222222;
         line-height: 1.33rem;
         margin-top: 1.67rem;
-      }
-    }
-    .medias {
-      align-self: flex-start;
-      margin-top: 60px;
-      position: relative;
-      z-index: 10;
-      
-      a {
-        cursor: pointer;
-        display: block;
-        width: auto;
-        height: auto;
-        & > div {
-          position: relative;
-          width: 3.33rem;
-          height: 3.33rem;
-          
-        }
-        & + a {
-          margin-left: 2.5rem;
-        }
       }
     }
   }
@@ -142,9 +102,6 @@
 
 @media screen and (max-width: 1440px) {
   .footer {
-    &::before {
-      width: 32%;
-    }
     .footerBox {
       width: 83.3%;
     }
@@ -153,9 +110,6 @@
 
 @media screen and (max-width: 1240px) {
   .footer {
-    &::before {
-      width: 38%;
-    }
     .footerBox {
       width: 89%;
     }
@@ -164,9 +118,6 @@
 
 @media screen and (max-width: 1024px) {
   .footer {
-    &::before {
-      background: none;
-    }
     height: 17.49rem;
     .footerBox {
       width: 92.2%;
@@ -177,9 +128,6 @@
 @media screen and (max-width: 900px) {
   .footer {
     height: auto;
-    &::before {
-      background: none;
-    }
 
     .footerBox {
       flex-direction: column;
@@ -199,26 +147,39 @@
       .brands {
         display: none;
       }
-      .medias {
-        order: 1;
-        margin: 2.58rem 0 2.5rem;
-      }
 
       .platform,
-      .support {
+      .support,
+      .medias {
         h4 {
           font-size: 1.33rem;
           font-family: Inter-SemiBold, Inter;
           font-weight: 600;
-          color: #ffffff;
+          color: #222;
           line-height: 1.33rem;
         }
         p {
           font-size: 1.17rem;
           font-family: Inter-Medium, Inter;
           font-weight: 500;
-          color: #ffffff;
+          color: #222;
           line-height: 1.17rem;
+        }
+      }
+    }
+  }
+}
+
+@media  screen and (max-width: 600px) {
+  .footer {
+    .footerBox {
+      .linkList {
+        width: 100%;
+        justify-content: space-between;
+      }
+      div {
+        & + div {
+          margin-left: 0rem;
         }
       }
     }
