--- a/components/PageHome/Support/style.module.scss
+++ b/components/PageHome/Support/style.module.scss
@@ -4,16 +4,24 @@
     width: 78.2%;
     margin: auto;
     padding-top: 6.75rem;
+    padding-bottom: 6.58rem;
 
     .cardList {
       display: flex;
-      flex-wrap: wrap;
+      // flex-wrap: wrap;
       justify-content: space-between;
       margin-top: 3.33rem;
 
-      & > div {
-        width: calc((100% - 8rem) / 4);
-        margin-bottom: 2.67rem;
+      .brandItem {
+        width: calc((100% - 8.32rem) / 5);
+        height: 8rem;
+
+        border-radius: 1rem;
+        border: 0.08rem solid rgba(#222, 0.2);
+        & > div {
+          position: relative;
+          height: 100%;
+        }
       }
     }
   }
@@ -24,9 +32,8 @@
     .supportBox {
       width: 80%;
       .cardList {
-        & > div {
-          width: calc((100% - 7rem) / 4);
-          margin-bottom: 2.3rem;
+        .brandItem {
+          height: 7.2rem;
         }
       }
     }
@@ -39,9 +46,8 @@
       width: 83.3%;
       padding-top: 6.67rem;
       .cardList {
-        & > div {
-          width: calc((100% - 6rem) / 4);
-          margin-bottom: 2rem;
+        .brandItem {
+          height: 6.83rem;
         }
       }
     }
@@ -50,11 +56,10 @@
 
 @media screen and (max-width: 1240px) {
   .support {
-
     .supportBox {
       width: 89%;
       padding-top: 5rem;
-      
+
       .cardList {
         margin-top: 2.5rem;
       }
@@ -62,25 +67,56 @@
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .support {
-
     .supportBox {
       width: 92.2%;
       padding-top: 5rem;
-      
+      padding-bottom: 5rem;
+
       .cardList {
         margin-top: 2.5rem;
+        .brandItem {
+          height: 5.33rem;
+          border-radius: 0.67rem;
+        }
       }
     }
   }
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px) {
   .support {
+    .supportBox {
+      .cardList {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        .brandItem {
+          width: calc((100% - 2rem) / 3);
+          margin: 0 0.3rem 0.83rem;
+        }
+      }
+    }
+  }
+}
 
+@media screen and (max-width: 600px) {
+  .support {
     .supportBox {
       padding-top: 2.5rem;
+      padding-bottom: 2.58rem;
+
+      .cardList {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        margin-top: 1.75rem;
+        .brandItem {
+          width: calc((100% - 1.66rem) / 3);
+          height: 3.33rem;
+          margin: 0 0.27rem 0.83rem;
+          // margin-bottom: 0.83rem;
+        }
+      }
     }
   }
 }
