--- a/components/PageHome/components/SectionTitle/style.module.scss
+++ b/components/PageHome/components/SectionTitle/style.module.scss
@@ -6,7 +6,7 @@
     font-family: Montserrat-Black, Montserrat;
     font-weight: 900;
     color: #222222;
-    line-height: 3rem;
+    // line-height: 3rem;
     background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -18,7 +18,7 @@
     font-family: Montserrat-Black, Montserrat;
     font-weight: 900;
     color: #222222;
-    line-height: 3rem;
+    // line-height: 3rem;
     white-space: nowrap;
   }
 }
@@ -28,7 +28,7 @@
     .emphasize,
     .normal {
       font-size: 2.5rem;
-      line-height: 2.5rem;
+      // line-height: 2.5rem;
     }
   }
 }
@@ -38,7 +38,7 @@
     .emphasize,
     .normal {
       font-size: 2rem;
-      line-height: 2rem;
+      // line-height: 2rem;
     }
   }
 }
