--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 31.25vw;
   max-height: 45.83rem;
-  min-height: 33.33rem;
+  // min-height: 33.33rem;
   object-fit: cover;
 }
 
@@ -75,9 +75,15 @@
   }
 }
 
+@media screen and (max-width: 900px) {
+  .coverBox {
+    height: 45vw;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .coverBox {
-    height: 41.67rem;
+    // height: 41.67rem;
     object-fit: contain;
   }
   .contactUs {
@@ -97,5 +103,11 @@
       max-width: 80%;
       text-align: center;
     }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .coverBox {
+    height: 41.67rem;
   }
 }
