--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -4,6 +4,7 @@
   max-height: 45.83rem;
   // min-height: 33.33rem;
   object-fit: cover;
+  background: linear-gradient(180deg, rgba(#984CEC, 0.3) 0%, rgba(110,255,196,0.3) 100%);
 }
 
 .contactUs {
