--- a/components/PageHome/components/StrategyArticle/style.module.scss
+++ b/components/PageHome/components/StrategyArticle/style.module.scss
@@ -128,7 +128,7 @@
       width: 11.67rem;
     }
     .articleInfo {
-      padding: 1.67rem 1.67rem 2.67rem;
+      padding: 1.67rem;
 
       h3 {
         font-size: 1.75rem;
